yiltc-v0.2-backup/testsuite/negative/struct_init_unknown_field.yilt
// Initializing a struct with a field that doesn't exist should error
struct Point
    x int
    y int

fn main()
    let p = Point{x: 10, y: 20, z: 30}
